--- a/2024/public/css/koppe.css
+++ b/2024/public/css/koppe.css
@@ -1,3 +1,14 @@
+/*
+ * @package koppefest
+ *
+ * @file Stylesheet
+ * @author Christoph Kappel <christoph@unexist.dev>
+ * @version $Id: 2024/koppe.rb,v 0 1724858416.0-7200 unexist $
+ *¬
+ * This program can be distributed under the terms of the GNU GPLv3.
+ * See the file COPYING for details.
+ */
+
 /* Colors */
 :root {
     --light_gray: #eee;
@@ -240,3 +251,4 @@ hr {
 .form-check-label {
     padding-left: 0px;
 }
+
