Fixed negative numbers

--- a/2024/views/index.haml
+++ b/2024/views/index.haml
@@ -68,9 +68,9 @@
                 %tr
                     %td
                         Ich/Wir kommen mit
-                        %input.input-lg{id: "adultsno", type: "number", value: 1}
+                        %input.input-lg{id: "adultsno", type: "number", min: 0, value: 1}
                         Erwachsenen
-                        %input.input-lg{id: "childrenno", type: "number", value: 0}
+                        %input.input-lg{id: "childrenno", type: "number", min: 0, value: 0}
                         Kindern
                     %td.so_far
                         (Bisher
@@ -81,7 +81,7 @@
                 %tr
                     %td
                         Ich/Wir können
-                        %input.input-lg{id: "beerbenchno", type: "number", value: 0}
+                        %input.input-lg{id: "beerbenchno", type: "number", min: 0, value: 0}
                         Bierzeltgarnitur(en) mitbringen
                     %td.so_far
                         (Bisher
@@ -90,9 +90,9 @@
                 %tr
                     %td
                         Ich/Wir können
-                        %input.input-lg{id: "tablesno", type: "number", value: 0}
+                        %input.input-lg{id: "tablesno", type: "number", min: 0, value: 0}
                         Gartentisch(e) und
-                        %input.input-lg{id: "chairsno", type: "number", value: 0}
+                        %input.input-lg{id: "chairsno", type: "number", min: 0, value: 0}
                         Stühle mitbringen
                     %td.so_far
                         (Bisher
@@ -103,7 +103,7 @@
                 %tr
                     %td
                         Ich/Wir können
-                        %input.input-lg{id: "standtablesno", type: "number", value: 0}
+                        %input.input-lg{id: "standtablesno", type: "number", min: 0, value: 0}
                         Stehtische mitbringen
                     %td.so_far
                         (Bisher
@@ -112,7 +112,7 @@
                 %tr
                     %td
                         Ich/Wir können
-                        %input.input-lg{id: "papertableno", type: "number", value: 0}
+                        %input.input-lg{id: "papertableno", type: "number", min: 0, value: 0}
                         Tapeziertisch(e) [als Buffett] mitbringen
                     %td.so_far
                         (Bisher
@@ -121,7 +121,7 @@
                 %tr
                     %td
                         Ich/Wir können
-                        %input.input-lg{id: "tentsno", type: "number", value: 0}
+                        %input.input-lg{id: "tentsno", type: "number", min: 0, value: 0}
                         Zelte mitbringen
                     %td.so_far
                         (Bisher
@@ -130,7 +130,7 @@
                 %tr
                     %td
                         Ich/Wir können
-                        %input.input-lg{id: "grillsno", type: "number", value: 0}
+                        %input.input-lg{id: "grillsno", type: "number", min: 0, value: 0}
                         Grill mitbringen
                     %td.so_far
                         (Bisher
@@ -139,7 +139,7 @@
                 %tr
                     %td
                         Ich/Wir können
-                        %input.input-lg{id: "parasolno", type: "number", value: 0}
+                        %input.input-lg{id: "parasolno", type: "number", min: 0, value: 0}
                         Sonnenschirme mitbringen
                     %td.so_far
                         (Bisher
