--- a/2024/public/css/koppe.css
+++ b/2024/public/css/koppe.css
@@ -157,6 +157,10 @@ input[type=number] {
     width: 4em;
 }
 
+input[type=checkbox] {
+    width: auto;
+}
+
 input:hover, textarea:hover {
   border: 1px solid var(--blue);
 }
