Fixed mapping of textareas

--- a/2024/views/index.haml
+++ b/2024/views/index.haml
@@ -148,15 +148,15 @@
                 %tr
                     %td{colspan: 2}
                         Ich/Wir bringen Speisen mit: 
-                        %textarea{id: "comment", rows: 2, tabindex: 12}
+                        %textarea{id: "foods", rows: 2, tabindex: 12}
                 %tr
                     %td{colspan: 2}
                         Ich/Wir bringen Getränke mit: 
-                        %textarea{id: "comment", rows: 2, tabindex: 13}
+                        %textarea{id: "drinks", rows: 2, tabindex: 13}
                 %tr
                     %td{colspan: 2}
                         Sonstiges: 
-                        %textarea{id: "comment", rows: 2, tabindex: 14}
+                        %textarea{id: "misc", rows: 2, tabindex: 14}
 
                 %tr
                     %td
